--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <!-- Estilos y Librerías CSS -->
   <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
   <link rel="stylesheet" href="./assets/css/styles.css">
+  <script src="assets/js/modernizr-custom.js"></script>
 </head>
 <body>
   <!-- Seccion de primera parte -->
@@ -20,15 +21,40 @@
       <h1>Lorem ipsum</h1>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
         Eius veniam unde quidem doloribus deleniti recusandae.
+        Eius veniam unde quidem doloribus deleniti recusandae.
       </p>
     </article>
-    <button id="cta">Leer Más</button>
+    <button id="cta" class="flex">
+      <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+          viewBox="0 0 64 64" style="enable-background:new 0 0 64 64;" xml:space="preserve">
+        <path d="M44.8,51.7c-1.1-1.1-2.7-1.3-3.7-0.3l-6.4,5.3V2.7C34.7,1.1,33.6,0,32,0c-1.6,0-2.7,1.1-2.7,2.7v53.9l-6.4-5.3
+          c-1.1-1.1-2.9-0.8-3.7,0.3s-0.8,2.9,0.3,3.7l8.8,7.5c1.1,0.8,2.4,1.3,3.7,1.3c1.3,0,2.7-0.5,3.7-1.3l8.8-7.5
+          C45.6,54.4,45.6,52.8,44.8,51.7z"/>
+        </svg>
+    </button>
   </section>
+  <div class="modal">
+    <div class="shadow_modal">
+      
+    </div>
+    <div class="txt">
+      <div class="close">
+        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+        viewBox="0 0 64 64" style="enable-background:new 0 0 64 64;" xml:space="preserve">
+      <path d="M35.4,32l19.9-19.9c1-1,1-2.4,0-3.4s-2.4-1-3.4,0L32,28.6L12,8.8c-0.9-1-2.4-1-3.3,0s-1,2.4,0,3.4L28.6,32L8.7,51.9
+        c-1,1-1,2.4,0,3.4c0.5,0.4,1,0.7,1.7,0.7s1.2-0.2,1.7-0.7l20-19.9l20,19.8c0.5,0.4,1.2,0.7,1.7,0.7c0.5,0,1.2-0.2,1.7-0.7
+        c1-1,1-2.4,0-3.4L35.4,32z"/>
+      </svg>
+      </div>
+      <h2>Info about</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, voluptates esse eligendi eaque, assumenda beatae reiciendis pariatur autem quis nam tempore dolorum quidem. Perferendis nobis repellat pariatur aspernatur voluptatum sed.</p>
+    </div>
+  </div>
   <main>
     <!-- Seccion de Cards -->
     <section class="info container flex">
       <figure>
-        <img src="./assets/images/trees.jpg" alt="Trees" title="trees">
+        <img src="./assets/images/frosty.jpg" alt="Frosty" title="frosty">
       </figure>
       <article>
         <h2>Lorem ipsum Lorem</h2>
@@ -103,33 +129,71 @@
         </p>
       </article>
       <article class="important">
-        <h2>Importante</h2>
+        <h2>Important!</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita unde consectetur fugit odit ullam sit veritatis.</p>
       </article>
     </section>
-    <section class="cta_video">
-      <article>
-        <h2>Video</h2>
+    <!-- Seccion de video -->
+    <section class="cta_video flex">
+      <article class="info_video">
+        <h2>FrostBite</h2>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt similique animi praesentium officiis ullam quasi enim debitis natus cupiditate cum. Atque, deserunt ullam est quasi doloribus sed voluptatem asperiores cumque!
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt similique animi praesentium officiis ullam quasi enim debitis natus cupiditate cum.
         </p>
+        <button id="contact">Contáctanos</button>
       </article>
       <div class="cont_video">
-        <video src="" constrols></video>
+        <video src="./assets/images/frost.mp4" controls></video>
       </div>
     </section>
-    <footer>
+    <footer class="flex">
       <figure>
-        <img src="" alt="">
+        <img src="./assets/images/surf.jpg" alt="Surf Coffe" title="SurfCoffe">
       </figure>
-      <aside>
-        <span>Youtube</span>
-        <span>Twitter</span>
-        <span>Facebook</span>
-        <span>Instagram</span>
+      <aside class="flex">
+        <a href="#" class="yt">
+          <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+            viewBox="0 0 64 64" style="enable-background:new 0 0 64 64;" xml:space="preserve">
+          <path d="M62.7,16.6c-0.7-2.8-2.9-4.9-5.7-5.7c-5-1.3-25-1.3-25-1.3s-20,0-25,1.3c-2.8,0.7-4.9,2.9-5.7,5.7C0,21.6,0,32,0,32
+            s0,10.4,1.3,15.4c0.7,2.8,2.9,4.9,5.7,5.7c5,1.3,25,1.3,25,1.3s20,0,25-1.3c2.8-0.7,4.9-2.9,5.7-5.7C64,42.4,64,32,64,32
+            S64,21.6,62.7,16.6z M25.6,41.6V22.4L42.2,32L25.6,41.6z"/>
+          </svg>
+        </a>
+        <a href="#" class="tw">
+          <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+            viewBox="0 0 64 64" style="enable-background:new 0 0 64 64;" xml:space="preserve">
+          <path d="M20.1,58.1c24.2,0,37.4-20,37.4-37.4c0-0.5,0-1.1-0.1-1.7c2.6-1.9,4.8-4.2,6.5-6.8c-2.4,1.1-4.9,1.8-7.6,2.1
+            c2.7-1.6,4.8-4.2,5.8-7.3c-2.6,1.5-5.3,2.6-8.4,3.2c-2.4-2.6-5.8-4.2-9.6-4.2c-7.3,0-13.2,5.9-13.2,13.2c0,1,0.1,2,0.3,3
+            C20.6,21.6,10.9,16.4,4.4,8.4c-1.1,2-1.8,4.2-1.8,6.6c0,4.6,2.3,8.6,5.9,10.9c-2.2-0.1-4.2-0.7-5.9-1.6c0,0.1,0,0.1,0,0.1
+            c0,6.3,4.5,11.7,10.5,12.9c-1.1,0.3-2.3,0.5-3.4,0.5c-0.9,0-1.7-0.1-2.5-0.3c1.7,5.2,6.5,9,12.3,9.1c-4.5,3.5-10.2,5.6-16.3,5.6
+            C2,52.3,1,52.2,0,52.1C5.7,55.9,12.7,58.1,20.1,58.1"/>
+          </svg>
+        </a>
+        <a href="#" class="twt">
+          <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+            viewBox="0 0 64 64" style="enable-background:new 0 0 64 64;" xml:space="preserve">
+          <path d="M5.7,0L1.5,11v44.9h15.3V64h8.6l8.1-8.1h12.4l16.6-16.8V0H5.7z M56.8,36.2l-9.6,9.6H32L23.9,54v-8.1H11V5.7h45.8L56.8,36.2
+            L56.8,36.2z M47.3,16.7v16.7h-5.7V16.7H47.3z M32,16.7v16.7h-5.7V16.7H32z"/>
+          </svg>
+        </a>
+        <a href="#" class="fb">
+          <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+              viewBox="0 0 64 64" style="enable-background:new 0 0 64 64;" xml:space="preserve">
+            <g>
+              <path d="M37.2,64H28c-2.5,0-4.5-2-4.5-4.5V37H17c-2.5,0-4.5-2-4.5-4.5v-6.9c0-2.5,2-4.6,4.5-4.6h6.5v-5.5c0-9.1,6.2-15.5,15-15.5
+                H47c1.4,0,2.5,1.1,2.5,2.5v13c0,1.4-1.1,2.5-2.5,2.5h-5.5v3h5.4c0,0,0.1,0,0.1,0c1.4,0.1,2.7,0.7,3.5,1.8c0.8,1.1,1.2,2.4,0.9,3.8
+                l-1.3,6.7C49.8,35.4,48,37,45.7,37h-4.3v22.5C41.5,62,39.5,64,37.2,64z M28.5,59h8V34.5c0-1.4,1.1-2.5,2.5-2.5h6.3l1.2-6H39
+                c-1.4,0-2.5-1.1-2.5-2.5v-8c0-1.4,1.1-2.5,2.5-2.5h5.5V5h-6c-6.1,0-10,4.1-10,10.5v8c0,1.4-1.1,2.5-2.5,2.5h-8.5v6H26
+                c1.4,0,2.5,1.1,2.5,2.5V59z"/>
+            </g>
+            </svg>
+        </a>
       </aside>
     </footer>
   </main>
+  <!-- Librerías JavaScript y archivos JavaScript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/ScrollToPlugin.min.js"></script>
   <script src="assets/js/app.js"></script>
 </body>
 </html>
