--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <!-- Estilos y Librerías CSS -->
   <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
   <link rel="stylesheet" href="./assets/css/styles.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" >
   <script src="assets/js/modernizr-custom.js"></script>
 </head>
 <body>
@@ -194,6 +195,7 @@
   <!-- Librerías JavaScript y archivos JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/ScrollToPlugin.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/ScrollTrigger.min.js"></script>
   <script src="assets/js/app.js"></script>
 </body>
 </html>
